tests/ast_interpreter/err_var_undeclared_use.expected
<string>:3:9: error: undeclared variable "y"
    x + y;
        ^
